err/python-controlsystems.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/controlsystems'...
Compiling './lib/python3.5/site-packages/controlsystems/chienhronesreswick0.py'...
***   File "./lib/python3.5/site-packages/controlsystems/chienhronesreswick0.py", line 50
    print ChienHronesReswick0(g, 0.01, 10, RK4)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/chienhronesreswick20.py'...
***   File "./lib/python3.5/site-packages/controlsystems/chienhronesreswick20.py", line 50
    print ChienHronesReswick20(g, 0.01, 10, RK4)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/cohencoon.py'...
***   File "./lib/python3.5/site-packages/controlsystems/cohencoon.py", line 51
    print CohenCoon(g, 0.01, 10, RK4)
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/euler.py'...
***   File "./lib/python3.5/site-packages/controlsystems/euler.py", line 55
    print Euler(g, 0.01, 10)
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/matrix.py'...
***   File "./lib/python3.5/site-packages/controlsystems/matrix.py", line 175
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/controlsystems/polynomial.py'...
***   File "./lib/python3.5/site-packages/controlsystems/polynomial.py", line 149
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/controlsystems/rk2.py'...
***   File "./lib/python3.5/site-packages/controlsystems/rk2.py", line 60
    print RK2(g, 0.01, 10)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/rk3.py'...
***   File "./lib/python3.5/site-packages/controlsystems/rk3.py", line 68
    print RK3(g, 0.01, 10)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/rk4.py'...
***   File "./lib/python3.5/site-packages/controlsystems/rk4.py", line 75
    print RK4(g, 0.01, 10)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/statespace.py'...
***   File "./lib/python3.5/site-packages/controlsystems/statespace.py", line 99
    print StateSpace([
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/controlsystems/transferfunction.py'...
***   File "./lib/python3.5/site-packages/controlsystems/transferfunction.py", line 101
    print a
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/controlsystems/zieglernichols.py'...
***   File "./lib/python3.5/site-packages/controlsystems/zieglernichols.py", line 50
    print ZieglerNichols(g, 0.01, 10, RK4)
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_controlsystems-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
